Use finally to clean up after the fetch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section id="container">
         <!-- Tickets will be displayed here -->
     </section>
-    <div id="loading">Loading, please wait...</div>
+    <div id="processing"> processing, please wait...</div>
     <script src="main.js"></script>   
 </body>
 </html>
